# wb_parser

./: .env.local  .gitignore  Dockerfile  README.md  alembic.ini  bot.py  docker-compose.local.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 7163e724874f_init.py  904a47d1c0fd_admin_model.py  c89bfccd7e33_init.py
src/: __init__.py  auth.py  config.py  db_session.py  depends.py  errors.py  models.py  repositories.py  scheduler.py  schemas.py  services.py  specifications.py  tasks.py
src/clients/: wildberries.py
src/routes/: __init__.py
src/routes/v1/: __init__.py  auth.py  products.py
src/tg_bot/: __init__.py  state.py
src/tg_bot/handlers/: wb_check_products.py
src/tg_bot/keyboards/wb_keyboard/: callbacdata.py  check_product.py
src/tg_bot/middlewares/: product_service.py
