[tool.poetry]
name = "wb-parser"
version = "0.1.0"
description = ""
authors = ["Dmitry <dz5011@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.7"
sqlalchemy = "2.0.37"
alembic = "1.14.1"
pydantic-settings = "2.7.1"
asyncpg = "0.30.0"
aiohttp = "3.11.11"
uvicorn = "0.34.0"
apscheduler = "3.11.0"
pytz = "2024.2"
fastapi-jwt = "0.3.0"
bcrypt = "4.2.1"
python-jose = "3.3.0"
aiogram = "3.17.0"


[tool.poetry.group.DEV.dependencies]
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
